# competitor-review-analyzer

./: .gitignore  README.md  amazon_cookies.json  bestbuy_cookies.json  dump_cookies.py  operator.sh  pyproject.toml  update_summary.py  upload_products.py  upload_reviews.py
src/amazon_review_scraper/: __main__.py  collector.py  conf.py  models.py  scraper.py
src/bestbuy_review_scraper/: __main__.py  scraper.py
src/walmart_review_scraper/: __main__.py  scraper.py
